2006-09-12 [colin]	2.4.0cvs178

	* src/prefs_actions.c
	* src/prefs_filtering_action.c
	* src/prefs_matcher.c
		Use (New) instead of New everywhere

2006-09-12 [wwp]	2.4.0cvs177

	* manual/fr/addrbook.xml
	* manual/fr/handling.xml
		updated some quotes in the fr manual to match the fr translation.

2006-09-12 [wwp]	2.4.0cvs176

	* src/prefs_matcher.c
		don't store translated string elements in matcher expressions.
		Also fixed a misused of Q_().

2006-09-11 [wwp]	2.4.0cvs175

	* src/plugins//bogofilter/bogofilter.c
	* src/plugins//clamav/clamav_plugin.c
	* src/plugins//demo/demo.c
	* src/plugins//dillo_viewer/dillo_viewer.c
	* src/plugins//pgpcore/plugin.c
	* src/plugins//pgpinline/plugin.c
	* src/plugins//pgpmime/plugin.c
	* src/plugins//spamassassin/spamassassin.c
		gettext-ize more strings (mostly plugin error messages).

2006-09-11 [colin]	2.4.0cvs174

	* src/alertpanel.c
		Make maximum buffer size bigger to avoid
		truncating translated messages. Patch by
		Fabien

2006-09-11 [colin]	2.4.0cvs173

	* src/etpan/imap-thread.c
		Fix compilation on OpenBSD, thanks to 
		Landry

2006-09-10 [wwp]	2.4.0cvs172

	* manual/account.xml
	* manual/addrbook.xml
	* manual/handling.xml
	* manual/es/handling.xml
	* manual/fr/account.xml
	* manual/fr/addrbook.xml
	* manual/fr/handling.xml
		documented addressbook matching (condition configuration):
		  addrbook.xml, en fr
		documented per-account filtering rules (handling/filtering
		  section, account section):
		  account.xml, handling.xml, en fr
		slightly updated the handling/searching section to tell few
		  words about the extended search ability:
		  handling.xml, en fr
		added missing <quote></quotes> to Quick Search:
		  handling.xml, en fr es
		fixed a typo (auomatically):
		  handling.xml, en
		changes revisited by Paul.

2006-09-10 [paul]	2.4.0cvs171

	* src/prefs_actions.c
	* src/prefs_filtering.c
	* src/prefs_template.c
		adjustments to the gui
		Patch by Fabien Vantard (slightly modified)
