@@ -745,6 +745,8 @@ gchar *folder_item_get_path		(FolderItem	*item);
 gint   folder_item_open			(FolderItem	*item);
 gint   folder_item_close		(FolderItem	*item);
 gint   folder_item_scan			(FolderItem	*item);
+gint   folder_item_scan_full		(FolderItem 	*item, 
+					 gboolean 	 filtering);
 gint   folder_item_syncronize_flags	(FolderItem 	*item);
 void   folder_item_scan_foreach		(GHashTable	*table);
 MsgInfo *folder_item_get_msginfo	(FolderItem 	*item,
